# Leetcode-Python

./: .gitignore  README.md  pyproject.toml
Algorithms/Easy/: defanging_ip_adress.py  final_value_after_operations.py  find_words_containing.py  goal_parser.py  most_words_found.py  number_of_jewels.py
Algorithms/Medium/: garbage_collection.py  min_partition.py  number_of_beam.py
