[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = "Leetcode solution in python"
authors = ["Ashish K Singh <ashish.singh@canvass.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
